client/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-api-route
  namespace: profertility
spec:
  parentRefs:
    - name: profertility-gateway
  hostnames:
    - "mojasim.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: profertility-client
          port: 3000
